// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media component should be a Media Content 1`] = `
<figure
  className="media-content"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</figure>
`;

exports[`Media component should be a Media Item 1`] = `
<figure
  className="media-left"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</figure>
`;

exports[`Media component should concat classname in props with Bulma classname 1`] = `
<article
  className="media other-class this-is-a-test"
>
  <p>
    Default
  </p>
</article>
`;

exports[`Media component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
      "position": "content",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "article",
  },
  "render": [Function],
}
`;

exports[`Media component should expose Level Side and Item 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
    "position": "content",
  },
  "render": [Function],
}
`;

exports[`Media component should have media classname 1`] = `
<article
  className="media"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</article>
`;

exports[`Media component should use inline styles 1`] = `
<article
  className="media"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</article>
`;
